Fixed overflow on menu

--- a/src/components/Menu/index.css
+++ b/src/components/Menu/index.css
@@ -7,7 +7,7 @@
   top: 0;
   left: 0;
   transition: transform .3s cubic-bezier(0, .52, 0, 1);
-  overflow: scroll;
+  overflow: hidden;
   z-index: 1000;
   -webkit-transition: all 350ms ease-in-out;
   -moz-transition: all 350ms ease-in-out;
